<!--
  ~ Copyright (c) 2017 Bambora
  ~
  ~ Created by dlight on 2016-08-04.
  -->
<resources>
    <string name="app_name">Checkout</string>

    <string name="address_billing_switch_label">Billing address is same as shipping</string>

    <string name="address_title">Address</string>
    <string name="address_title_billing">Billing</string>
    <string name="address_title_shipping">Shipping</string>

    <string name="address_hint_name">name</string>
    <string name="address_hint_street">street</string>
    <string name="address_hint_postal">postal code</string>
    <string name="address_hint_city">city</string>
    <string name="address_hint_province">province</string>
    <string name="address_hint_country">country</string>

    <string name="next_button_to_billing">BILLING ADDRESS</string>
    <string name="next_button_to_payment">PAY</string>
    <string name="next_button_to_process">PAY</string>

    <string name="pay_hint_email">email</string>
    <string name="pay_hint_name">name</string>
    <string name="pay_hint_card_number">card number</string>
    <string name="pay_hint_expiry_month">month</string>
    <string name="pay_hint_expiry_year">year</string>
    <string name="pay_hint_cvv">cvv</string>

    <string name="pay_title">Payment</string>

    <string name="processing_target">payment</string>
    <string name="processing_text">processing</string>
    <string name="processing_amount">AMOUNT</string>

    <string name="secured_by">"secured by "</string>
    <string name="bambora">bambora</string>

    <string name="purchase_logo">LOGO</string>
    <string name="purchase_name">COMPANY NAME</string>
    <string name="purchase_amount">PURCHASE AMOUNT</string>
    <string name="purchase_description">DESCRIPTION</string>

    <string name="error_no_connection">Please check that you are connected to the Internet.</string>

    <string name="validator_suffix_empty"> is required!</string>
    <string name="validator_prefix_invalid">Enter a valid </string>
</resources>
