<!--
  ~ Copyright (c) 2017 Bambora
  ~
  ~ Created by dlight on 2016-08-04.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_payment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/header_padding"
    tools:context="com.bambora.na.checkout.fragments.PaymentFragment">

    <!--Title-->
    <TextView
        android:id="@+id/title_text"
        style="@style/TitleText"
        android:layout_alignParentTop="true"
        android:text="@string/pay_title" />

    <!--Fields-->
    <TableLayout
        android:id="@+id/pay_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_margin="@dimen/activity_padding"
        android:stretchColumns="*">

        <TableRow android:layout_marginBottom="@dimen/activity_padding_field_separator">

            <EditText
                android:id="@+id/pay_email"
                style="@style/EditText"
                android:layout_span="3"
                android:hint="@string/pay_hint_email"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/pay_name"
                style="@style/EditText"
                android:layout_span="3"
                android:hint="@string/pay_hint_name"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:layout_span="3">

                <EditText
                    android:id="@+id/pay_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789 "
                    android:hint="@string/pay_hint_card_number"
                    android:inputType="number"
                    android:nextFocusDown="@+id/pay_cvv"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/pay_card_image"
                    style="@style/FieldImage"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_credit_card_black" />
            </RelativeLayout>
        </TableRow>

        <TableRow>

            <RelativeLayout
                android:layout_width="@dimen/cvv_width"
                android:layout_height="@dimen/field_height"
                android:layout_span="1"
                android:paddingEnd="@dimen/expiry_padding">

                <EditText
                    android:id="@+id/pay_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pay_hint_cvv"
                    android:inputType="number" />

                <ImageView
                    android:id="@+id/pay_cvv_image"
                    style="@style/FieldImage"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/cvc_hint_color" />
            </RelativeLayout>

            <Spinner
                android:id="@+id/pay_expiry_month"
                style="@style/DateSpinner"
                android:layout_width="@dimen/date_spinner_width_month" />

            <Spinner
                android:id="@+id/pay_expiry_year"
                style="@style/DateSpinner" />
        </TableRow>
    </TableLayout>
</RelativeLayout>